# PersistentStorage

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: LibraryConfig.cmake  SetEnv.cmake
src/: CMakeLists.txt
src/PersistentStorage/deleters/: childthatisparentdeleter.h  defaultchilddeleter.h  defaultdeleter.h
src/PersistentStorage/storages/: basecontainer.h  childstorage.h  defaulttransactionmanager.cpp  defaulttransactionmanager.h  storage.h  store.h
src/PersistentStorage/watchers/: enqueuedevents.h  eventlistenerholder.h  eventqueuewatcher.h
src/persistent-storage/deleters/: childthatisparentdeleter.h  defaultchilddeleter.h  defaultdeleter.h  parentsdeleter.h
src/persistent-storage/storages/: childstorage.h  defaulttransactionmanager.cpp  defaulttransactionmanager.h  registertransactionmanager.cpp  registertransactionmanager.h  simplestorage.h  storage.h
src/persistent-storage/utils/: store_primitives.cpp  store_primitives.h
src/persistent-storage/watchers/: enqueuedevents.h  eventlistenerholder.h  eventqueuewatcher.h
src/persistent-storage/wrappers/: containerelementwrapper.h  transparentcontainerelementwrapper.h
test/: CMakeLists.txt  changewatchertest.cpp  childstoragetest.cpp  storeoperationstest.cpp  storewithwatchertest.cpp
